fix: change the splash screen design and fix spacing in bani overlay top and bottom layouts

--- a/www/assets/css/custom/splash.css
+++ b/www/assets/css/custom/splash.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;600&family=Mulish&display=swap');
+
 html,
 body {
   height: 100%;
@@ -8,15 +10,51 @@ body {
 body {
   height: 100%;
   width: 100%;
-  background-image: url('../../img/gurdaspurblue.png');
-  background-size: cover;
-  color: white;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.overlay-wrapper {
+  width: 500px;
+  height: 300px;
+  background-image: url('../../img/una.jpg');
+  background-size: contain;
+  border-radius: 20px;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  animation: fadeIn 0.5s ease-in-out;
+  border-radius: 20px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  font-family: 'Mulish', sans-serif;
+  color: white;
 
-  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.branding {
+  margin-top: 24px;
+}
+
+.overlay h1 {
+  font-weight: normal;
+  margin: 0;
+}
+
+.release-name {
+  color: #F99D1C;
+  font-family: 'Baloo Paaji 2', 'cursive';
+  font-weight: 600;
+}
+
+.wrapper {
+  margin-top: 12px;
 }
 
 .loader {
@@ -30,10 +68,6 @@ body {
   animation: rotation 1s linear infinite;
 }
 
-.branding {
-  background-color: white;
-}
-
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
@@ -41,5 +75,17 @@ body {
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
